@@ -6,6 +6,7 @@ oi-bus (0.2.0) UNRELEASED; urgency=medium
   * Move participant ID to the front of their format string.
   * Remove printouts from navbar when disallowed
   * Add basic styling to forms.
+  * Drastically increase dashboard font.
 
  -- Michał Sidor <michcioperz@asirpa.iscute.ovh>  Mon, 17 Feb 2020 20:16:24 +0100
 
